--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@ body {
     /* cursor: url('data/cursor.png'), auto;	 */
 }
 
+img { 
+    -webkit-user-drag: none; 
+    -khtml-user-drag: none; 
+    -moz-user-drag: none; 
+    -o-user-drag: none; 
+    user-drag: none; 
+  }
+
 .background-grid {
     position: fixed;
     width: 2000px;
