--- a/stylesheets/style-principles.scss
+++ b/stylesheets/style-principles.scss
@@ -106,3 +106,19 @@ body {
     100% {transform: translateX(-200%)};
 
 }
+
+@media screen and (max-width:1000px) {
+    .block-container {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .essay-block {
+        width: auto;
+        height: auto;
+    }
+    .body-text {
+        font-size: 20px;
+        line-height: 29px;
+    }
+} 
