--- a/stylesheets/style-principles.scss
+++ b/stylesheets/style-principles.scss
@@ -6,6 +6,10 @@ body {
     margin: 0;
 }
 
+a {
+    color: black;
+}
+
 .block-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
