--- a/stylesheets/report.scss
+++ b/stylesheets/report.scss
@@ -74,3 +74,12 @@ ul {
     padding: 5%;
     padding-top: 15%;
 }
+
+@media screen and (max-width:1000px) {
+    .twitter-share-container {
+        width: 90vw;
+    }
+    .twitter-timeline-container {
+       width: 90vw;
+    }
+} 
